Houston, we have liftoff. (Debugged multiple spaceship init calls, null pointer exception on this.velocity.)

--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -10,7 +10,7 @@
           xmlns:fx="http://javafx.com/fxml" >
 
 <Group  fx:id = "spaceshipGroup">
-    <Spaceship />
+    <Spaceship fx:id = "spaceship"/>
 </Group>
 <Group fx:id = "asteroidGroup">
 
