ASTEROIDSls (Fixed constructor bug in Asteroid)

--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -13,7 +13,7 @@
     <Spaceship fx:id = "spaceship"/>
 </Group>
 <Group fx:id = "asteroidGroup">
-
+    <Asteroid fx:id = "asteroid" />
 </Group>
 <Group fx:id = "bulletGroup">
     
