--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -14,15 +14,15 @@
     <Spaceship fx:id = "spaceship"/>
 </Group>
 <Group fx:id = "asteroidGroup">
-    <Asteroid fx:id = "asteroid1"/>
-    <!--<!-<Asteroid fx:id = "asteroid2" />-->
+    <!--<Asteroid fx:id = "asteroid1"/>-->
+    <!--<Asteroid fx:id = "asteroid2" />-->
     <!--<Asteroid fx:id = "asteroid3"/>-->
     <!--<Asteroid fx:id = "asteroid4" />-->
     <!--<Asteroid fx:id = "asteroid5"/>-->
 </Group>
-<!--<Group fx:id = "bulletGroup">-->
-    <!---->
-<!--</Group>-->
+<Group fx:id = "bulletGroup">
+
+</Group>
 <Group fx:id="scoreboardGroup">
     <Scoreboard/>
 </Group>
