--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -9,7 +9,9 @@
 <?import java.util.List?>
 
 <Pane fx:controller="sample.Controller"
-          xmlns:fx="http://javafx.com/fxml" >
+          xmlns:fx="http://javafx.com/fxml"
+           prefHeight="800"
+           prefWidth="1200">
 <Group  fx:id = "spaceshipGroup">
     <Spaceship fx:id = "spaceship"/>
 </Group>
