Made a rudimentary intro menu (styling WIP)

--- a/src/sample/menu.fxml
+++ b/src/sample/menu.fxml
@@ -9,10 +9,11 @@
 <?import javafx.scene.Group?>
 <?import java.util.List?>
 
-<Pane fx:controller="sample.Controller"
+<Pane fx:controller="sample.MenuController"
           xmlns:fx="http://javafx.com/fxml"
            prefHeight="800"
            prefWidth="1200">
-<Button text = "Return To Game" layoutX="600" layoutY="400"/>
+
+<Button text = "Play Game" layoutX="600" layoutY="400" onAction="#gotoGame"/>
 </Pane>
 
