--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -9,6 +9,10 @@
 <?import javafx.scene.Group?>
 <?import java.util.List?>
 
+
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.layout.BackgroundImage?>
 <Pane fx:controller="sample.Controller"
           xmlns:fx="http://javafx.com/fxml"
            prefHeight="800"
@@ -25,8 +29,7 @@
 <Group fx:id="scoreboardGroup">
 
 </Group>
-    <!--<Group fx:id="explosionGroup">-->
 
-    <!--</Group>-->
+
 </Pane>
 
