--- a/src/sample/menu.fxml
+++ b/src/sample/menu.fxml
@@ -1,19 +1,15 @@
 <!--Chet Aldrich and Josie Bealle
-    init FXML file-->
+    home screen FXML file-->
 
-<?import javafx.geometry.Insets?>
+
 <?import javafx.scene.layout.Pane?>
-<?import sample.*?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.Group?>
-<?import java.util.List?>
+
 
 <Pane fx:controller="sample.MenuController"
           xmlns:fx="http://javafx.com/fxml"
            prefHeight="800"
            prefWidth="1200">
-
 
 <Button text = "Play Game" layoutX="550" layoutY="400" onAction="#gotoGame"/>
 <Button text = "Quit" layoutX="570" layoutY="450" onAction="#close"/>
